apps/base/media/readarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: readarr
  name: readarr
  namespace: media
spec:
  replicas: 1
  selector:
    matchLabels:
      app: readarr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: readarr
    spec:
      nodeSelector:
        nodeclass: general
      containers:
        - env:
            - name: TZ
              value: America/Denver
          image: linuxserver/readarr:nightly
          name: readarr
          ports:
            - containerPort: 6767
              name: http
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: readarr-config
            - mountPath: /media
              name: media
            - mountPath: /data
              name: downloads
      volumes:
        - name: readarr-config
          persistentVolumeClaim:
            claimName: readarr-config
        - name: media
          persistentVolumeClaim:
            claimName: media
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
