apps/base/media/readarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readarr
  labels:
    app: readarr
spec:
  selector:
    app: readarr
  ports:
    - name: http
      port: 8787
      protocol: TCP
      targetPort: http
